# aiven-db-migrate

./: .flake8  .gitignore  .isort.cfg  .pylintrc  Makefile  README.md  aiven-db-migrate.spec  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  tests.yml
aiven/migrate/: __main__.py  pgmigrate.py
aiven_db_migrate/: __init__.py  pgmigrate.py
aiven_db_migrate/migrate/: __init__.py  __main__.py  clusters.py  errors.py  models.py  pgmigrate.py  pgutils.py  reports.py  version.py
ci/: install.sh
test/: conftest.py  test_db_size_check.py  test_force_method.py  test_main.py  test_migrate_checks.py  test_pg_cluster.py  test_pg_dump.py  test_pg_extensions.py  test_pg_migrate.py  test_pg_replication.py  test_pg_roles.py  test_reports.py  test_table_filtering.py  test_utils.py  utils.py
